--- a/web1/src/app/admin/reminder/reminder.component.css
+++ b/web1/src/app/admin/reminder/reminder.component.css
@@ -105,3 +105,8 @@ button:hover {
     background-color: #dfdfdf;
     color: #202020;
 }
+
+.my_class {
+    background-color: #1e2672;
+    color: #fff;
+}
