--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -226,7 +226,8 @@
                                                             <mat-label>Bill Format</mat-label>
                                                             <mat-select name="BillFormat" [(ngModel)]="data.BillFormat"
                                                                 required>
-                                                                <mat-option value="Bill">1</mat-option>
+                                                                <mat-option value="invoice.ejs">invoice.ejs</mat-option>
+                                                                <mat-option value="Arabic.ejs">Arabic.ejs</mat-option>
                                                             </mat-select>
                                                             <mat-error>Bill Format </mat-error>
                                                         </mat-form-field>
