--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -635,8 +635,8 @@
                                                         <td></td>
                                                         <td></td>
                                                         <td></td>
-                                                        <td *ngIf="user.UserGroup === 'CompanyAdmin'"></td>
-                                                        <td *ngIf="user.UserGroup === 'CompanyAdmin'"></td>
+                                                        <td *ngIf="user.UserGroup === 'CompanyAdmin'">{{this.DetailtotalPrice}}</td>
+                                                        <td *ngIf="user.UserGroup === 'CompanyAdmin'">{{this.DetailtotalPorfit}}</td>
                                                     </tr>
                                                 </thead>
                                                 <tbody class="text-center">
