--- a/web1/src/app/sale/bill/bill.component.css
+++ b/web1/src/app/sale/bill/bill.component.css
@@ -175,3 +175,11 @@ button:disabled .deletes_icon{
     background: rgb(30 38 114);
     color: white;
 }
+
+.productStatus {
+    color: #ff0000 !important;
+    font-weight: 600 !important;
+    font-size: 16px !important;
+    letter-spacing: .5px !important;
+}
+
