--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -90,9 +90,9 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Product Status</mat-label>
                         <mat-select name="ProductStatus" [(ngModel)]="BillMaster.ProductStatus" disabled
-                            #ProductStatuscontrol>
-                            <mat-option value="Pending"> Pending </mat-option>
-                            <mat-option value="Deliverd">Deliverd </mat-option>
+                            #ProductStatuscontrol >
+                            <mat-option value="Pending">  Pending </mat-option>
+                            <mat-option value="Deliverd"> Deliverd </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
@@ -1202,8 +1202,8 @@
             <div class="row">
                 <div class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Balance</mat-label>
-                        <input type="number" min="0" style="color: rgb(255 0 0 / 75%); font-size: 17px !important;"
+                        <mat-label style="color: rgb(255 0 0) !important;letter-spacing: 1px; font-weight: 800;">Balance</mat-label>
+                        <input class="redclass" type="number" min="0" style="color: rgb(255 0 0 / 75%) !important;"
                             matInput name="Total Amount" value="{{ this.applyPayment.PayableAmount}}" disabled
                             #TOutstandingcontrol [autocomplete]="false">
                     </mat-form-field>
