--- a/web1/src/app/inventory/pre-order/pre-order.component.html
+++ b/web1/src/app/inventory/pre-order/pre-order.component.html
@@ -272,8 +272,7 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>TAX Type</mat-label>
                                         <mat-select name="GSTType" [(ngModel)]="item.GSTType" #GSTTypecontrol required
-                                            (selectionChange)="calculateFields('TotalAmount', 'total')"
-                                            (blur)="notifyGst();">
+                                            (selectionChange)="calculateFields('TotalAmount', 'total')">
                                             <mat-option value="None"
                                                 *ngIf="item.GSTPercentage  === 0 || item.GSTAmount === 0">None
                                             </mat-option>
@@ -338,7 +337,7 @@
                                 <div *ngIf="addOrderPrice" class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0 ml-auto">
                                     <button *ngIf="editBtn === false" class="mr-3" type="submit" mat-raised-button
                                         color="primary"
-                                        [disabled]="!f.valid || item.GSTPercentage === 0 && item.GSTType !== 'None' && item.GSTType !== 'NONE' && item.GSTType !== '' "
+                                        [disabled]="!f.valid && this.GstTypeDis"
                                         mat-raised-button color="primary">Add</button>
                                     <button *ngIf="editBtn === true" class="mr-3" type="submit"
                                         [disabled]="item.Quantity == 0" mat-raised-button color="primary"
