--- a/web1/src/app/product/product-manage/product-manage.component.html
+++ b/web1/src/app/product/product-manage/product-manage.component.html
@@ -95,7 +95,7 @@
                                     <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>GST Percentage</mat-label>
-                                            <input matInput type="number" required="true" name="NewGSTPercentage" (blur)="gstType()" [(ngModel)]="newProduct.GSTPercentage"
+                                            <input matInput type="number" required="true" name="NewGSTPercentage"  [(ngModel)]="newProduct.GSTPercentage"
                                                #GSTPercentagecontrol>
                                         </mat-form-field>
                                     </div>
@@ -110,7 +110,7 @@
                                     <div *ngIf="newProduct.GSTPercentage !== 0"  class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>GST Type</mat-label>
-                                            <mat-select name="NewGSTType" (blur)="gstType()" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
+                                            <mat-select name="NewGSTType"  [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
                                                 <mat-option value="IGST">IGST</mat-option>
                                                 <mat-option value="CGST-SGST">CGST-SGST</mat-option>
                                                 <mat-option value="VAT">VAT</mat-option>
@@ -274,7 +274,7 @@
             <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>GST Percentage</mat-label>
-                    <input matInput type="number" required="true" name="NewGSTPercentage" (blur)="gstType()" [(ngModel)]="newProduct.GSTPercentage"
+                    <input matInput type="number" required="true" name="NewGSTPercentage"  [(ngModel)]="newProduct.GSTPercentage"
                        #GSTPercentagecontrol>
                 </mat-form-field>
             </div>
@@ -289,7 +289,7 @@
             <div *ngIf="newProduct.GSTPercentage !== 0"  class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>GST Type</mat-label>
-                    <mat-select name="NewGSTType" (blur)="gstType()" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
+                    <mat-select name="NewGSTType"  [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
                         <mat-option value="IGST">IGST</mat-option>
                         <mat-option value="CGST-SGST">CGST-SGST</mat-option>
                         <mat-option value="VAT">VAT</mat-option>
@@ -297,7 +297,7 @@
                 </mat-form-field>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
-                <button type="submit" (click)="gstType()" class="ms-2" [disabled]="GstTypeDis" mat-raised-button color="primary" >
+                <button type="submit"  class="ms-2" [disabled]="GstTypeDis" mat-raised-button color="primary" >
                     update
                 </button>
             </div>
