--- a/web1/src/app/product/add-manage/add-manage.component.html
+++ b/web1/src/app/product/add-manage/add-manage.component.html
@@ -149,7 +149,7 @@
                                 <div *ngIf="selectedRow.GSTPercentage !== 0" class="col-xl-1 col-lg-1 col-md-1 col-6 mb-0 p-md-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Type</mat-label>
-                                        <mat-select name="GSTType" [(ngModel)]="selectedRow.GSTType"  required #GSTTypecontrol1  (blur)="calculate('Total', 'chtotal')" [disabled]="this.setValueDisbled" >
+                                        <mat-select name="GSTType" [(ngModel)]="selectedRow.GSTType"  required #GSTTypecontrol1  (blur)="calculate('Total', 'chtotal');calculate('GSTAmount', 'chgst')" [disabled]="this.setValueDisbled" >
                                                 <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}</mat-option>
                                         </mat-select>
                                     </mat-form-field>
